added ssr and open grapg tags

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="Lupita 60s" />
+    <meta property="og:description" content="Una página interactiva de recuerdos" />
+    <meta property="og:image" content="https://lupita-60s.vercel.app/preview.jpg" />
+    <meta property="og:url" content="https://lupita-60s.vercel.app" />
+    <meta property="og:type" content="website" />
+
     <title>Lupita 60's</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
