added more tags

--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- Open Graph tags -->
-    <meta property="og:title" content="Lupita 60s" />
-    <meta property="og:description" content="Una página interactiva de recuerdos" />
-    <meta property="og:image" content="https://lupita-60s.vercel.app/preview.jpg" />
-    <meta property="og:url" content="https://lupita-60s.vercel.app" />
-    <meta property="og:type" content="website" />
 
-    <title>Lupita 60's</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/entry-client.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Open Graph tags -->
+  <meta property="og:title" content="Lupita 60s" />
+  <meta property="og:description" content="Una página interactiva de recuerdos" />
+  <meta property="og:image" content="https://lupita-60s.vercel.app/preview.jpg" />
+  <meta property="og:url" content="https://lupita-60s.vercel.app" />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="lupita-60s.vercel.app">
+  <meta property="twitter:url" content="https://lupita-60s.vercel.app">
+  <meta name="twitter:title" content="Lupita 60s">
+  <meta name="twitter:description" content="Una página interactiva de recuerdos">
+  <meta name="twitter:image" content="https://lupita-60s.vercel.app/preview.jpg">
+
+  <title>Lupita 60's</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/entry-client.tsx"></script>
+</body>
+
 </html>
